# manuals

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  AGENTS.md  CITATION.cff  _quarto.yml  changelog.html  changelog.qmd  changelog.xml  decisions.html  decisions.qmd  decisions.xml  index.html  index.md  listings.json  pyproject.toml  references.bib  references.html  references.qmd  robots.txt  search.json  sitemap.xml
_archive/: README.md
decisions/: 20260501-cockroachdb-with-mtls-role-separation.html  20260501-cockroachdb-with-mtls-role-separation.md  20260501-fly-io-for-deployment.html  20260501-fly-io-for-deployment.md  20260501-godot-double-precision-template-release-for-zone.html  20260501-godot-double-precision-template-release-for-zone.md  20260501-webtransport-over-quic-for-game-traffic.html  20260501-webtransport-over-quic-for-game-traffic.md  20260506-ghcr-package-ownership-same-repo.html  20260506-ghcr-package-ownership-same-repo.md  20260506-maglev-cycle-0-infra.html  20260506-maglev-cycle-0-infra.md  20260506-maglev-cycle-1-gateway-handshake.html  20260506-maglev-cycle-1-gateway-handshake.md  20260506-maglev-cycle-10-db-write.html  20260506-maglev-cycle-10-db-write.md  20260506-maglev-cycle-10-dynamic-physics-score.html  20260506-maglev-cycle-10-dynamic-physics-score.md  20260506-maglev-cycle-11-db-write.html  20260506-maglev-cycle-11-zone-console.html  20260506-maglev-cycle-11-zone-console.md  20260506-maglev-cycle-12-game-planning.html  20260506-maglev-cycle-12-game-planning.md  20260506-maglev-cycle-2-observability.html  (+161 more)
(+26 files in other folders)
