[project]
name = "manuals"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scipy",
    "pandas",
    "plotly",
    "itables",
    "cffconvert",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cffconvert = "*"
scipy = "*"
pandas = "*"
plotly = "*"
itables = "*"

[tool.pixi.tasks]
render = "quarto render"
